package com.mad.p03.np2020.routine.models;

class Label{

    private String mName;

    public Label(String name) {

        this.mName = name;
    }

}