package com.mad.p03.np2020.routine.models;

public class Steps{

    private String mName;
    private int mUID;

    public Steps() {
    }

    public void generateUID(){
        // TODO: Please upload any chnages to this class to the main branch`
    }

}