package com.mad.p03.np2020.routine.models;

public class todoListItem {
}
